--- a/UTN-Work/Views/css/estilos.css
+++ b/UTN-Work/Views/css/estilos.css
@@ -27,3 +27,12 @@ body {
      width: 500px;
      border: 2px solid rgba(0, 0, 0, 0.2);
 }
+
+.botonCentro {
+     position: absolute;
+     top: 50%;
+}
+
+.wrapper {
+     text-align: center;
+ }
