--- a/UTN-Work/Views/css/overwrite.css
+++ b/UTN-Work/Views/css/overwrite.css
@@ -1,7 +1,21 @@
 
-  :root {
+:root {
     --bs-font-sans-serif: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  }
+}
+
+#page-container {
+  position:relative;
+  min-height: 100vh;
+}
+
+#content-wrap{
+ padding-bottom: 7.5rem;
+}
+
+
+header{
+  height:fit-content;
+}
 
 .topbar {
     height: 5.5rem;
@@ -50,10 +64,23 @@
   }
 
   .card {
-    border: 0px;
+    /*border: 0px;*/
     border-radius: 0.20rem;
   }
 
   .z-index-up{
     z-index:4;
+  }
+
+
+  footer{
+    background-color:#095373;
+    position: absolute;
+    bottom: 0;
+    width:100%;
+    height:7.5 rem;
+  }
+
+  .txt-white{
+    color:white;
   }
