--- a/UTN-Work/Views/css/overwrite.css
+++ b/UTN-Work/Views/css/overwrite.css
@@ -1,6 +1,7 @@
 
 :root {
     --bs-font-sans-serif: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-primary: #095373;
 }
 
 #page-container {
@@ -15,6 +16,31 @@
 
 header{
   height:fit-content;
+}
+
+#inputEmail, #loginPassword{
+  border-radius: 20px;
+}
+
+label{
+  color:#6a6872;
+  font-size:0.95rem;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #095373;
+  border-color: #095373;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #095373;
+  border-color: #095373;
+}
+.btn{
+    border: 0px solid transparent;
+    padding: 0.375rem 2.6rem;
+    border-radius: 1rem;
 }
 
 .topbar {
